# confab-server

./: .travis.yml  Procfile  README.md  logfile  pyproject.toml  requirements.txt  server.py  setup.py
.github/workflows/: greetings.yml  python-app.yml  test.yml
confabserver/: __init__.py  accounts.py  database.py  schema.sql  server.py
tests/: conftest.py  helper.py  test_account_operations.py
