[project]
name = "confab-server"
version = "0.1.0"
description = "A package for handling API server of Confab."
authors = ["Shubhendra Kushwaha <shubhendrakushwaha94@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/TheShubhendra/confab-server"
packages = [
    { include = "confabserver" },
]

[dependencies]
python = "^3.8"
flask = "1.1.2"
psycopg2 = "2.8.6"
